--- a/tex/config/xemath.tex
+++ b/tex/config/xemath.tex
@@ -13,6 +13,10 @@
 % convolution
 \newcommand{\convolve}{*}
 
+% special functions
+\newcommand{\Leg}{\mathcal{P}}
+\newcommand{\Bess}{\mathcal{j}}
+
 % trigonometry
 \DeclareMathOperator{\arcosh}{arcosh}
 \DeclareMathOperator{\arsinh}{arsinh}
@@ -23,6 +27,7 @@
 
 % vector
 \renewcommand{\vec}[1]{\symbf{#1}}
+\newcommand{\uvec}[1]{\hat{\symbf{#1}}}
 
 % diagonal matrix
 \DeclareMathOperator{\diag}{diag}
