Add images in 3.8, Change layout

--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -455,12 +455,12 @@ Initial conditions: $x \ll 1$ at early times, so $y_i = y_{i, \text{eq}}$.
 
 No analytical solution is known. A set of numerical solutions is shown in \cref{fig:boltzmann}
 
-\begin{figure}
+\begin{marginfigure}
 	\centering
 	\includegraphics[width=\textwidth]{img/ch-02/boltzmann.png}
 	\caption{Solutions of the Boltzmann equation for different destruction rates $\beta$. We assume $\beta(T) = \beta_0$ is constant. The vertical axis is a proxy for abundance, and the horizontal axis for time. First, particles remain in equilibrium (solid line), then they decouple (dashed lines), leaving relic abundances. When $\beta_0$ is large, thermal equilibrium is maintained longer, so the relic abundance is lower.}
 	\label{fig:boltzmann}
-\end{figure}
+\end{marginfigure}
 
 
 \section{Particle relics}
@@ -538,12 +538,12 @@ Once the temperature drops below \SI{1}{\MeV}, which is the binding energy of a 
 For each of these reactions, there is a Boltzmann equation which describes the evolution of the number densities. This coupled system of equations can be solved numerically to find the abundances of nuclei. The solution for a few nuclei is shown in \cref{fig:nucleosynthesis}.
 
 
-\begin{figure}
+\begin{marginfigure}
 	\centering
-	\includegraphics[width=0.6\textwidth]{img/ch-02/nucleosynthesis.png}
+	\includegraphics[width=\textwidth]{img/ch-02/nucleosynthesis.png}
 	\caption{The abundances of \ce{D}, \ce{^4He}, \ce{^3He}, and \ce{^7Li}, as a function of the photon to baryon ration $\eta$. The yellow vertical area indicates the measured value of $\eta$, while the shaded horizontal bars are the measured abundances. The modelled abundances agree well with the experiments, except for \ce{^7Li}, which is probably due to uncertainties in how much \ce{^7Li} is destroyed in stars.}
 	\label{fig:nucleosynthesis}
-\end{figure}
+\end{marginfigure}
 
 
 \section{Recombination}
@@ -587,12 +587,12 @@ After decoupling, the universe is transparent to photons. When an observer today
 \end{align*}
 Measurements of the CMB show a blackbody spectrum with remarkably deviations of $\Delta T / T \approx \num{e-5}$, as can be seen in \cref{fig:cmb}.
 
-\begin{figure}
+\begin{marginfigure}
 	\centering
-	\includegraphics[width=0.5\textwidth]{img/ch-02/cmb.png}
+	\includegraphics[width=\textwidth]{img/ch-02/cmb.png}
 	\caption{The measured spectrum of the cosmic microwave background and a fit with a blackbody spectrum. The residuals show an average deviation of only $\Delta T / T \approx \num{e-5}$.}
 	\label{fig:cmb}
-\end{figure}
+\end{marginfigure}
 
 
 
