--- a/tex/main/04-nonlinear-perturbations.tex
+++ b/tex/main/04-nonlinear-perturbations.tex
@@ -1,1 +1,200 @@
 \chapter{Nonlinear Perturbations}
+
+\section{Approaches for non-linear structure formation}
+
+Remember that at late times, perturbations become non-linear, and that small-scale perturbations become non-linear first.
+Perturbations collapse to form dark halos, filaments, and pancakes.
+This structure is called the cosmic web, which is a signature of non-linear gravitational instability in an expanding universe.
+% movie (illustris collaboration)
+
+Studying the evolution of non-linear perturbations is very difficult, and no exact analytic solutions have yet been found in the fully non-linear regime.
+There are different approaches to tackle the problem:
+\begin{itemize}
+	\item Numerical simulations
+	\item Higher order perturbation theory is only a valid approach for mildly non-linear perturbations and scales.
+	On small scales, this does not work.
+	\item The Halo model, which is a simplified model, is very successful in describing the formation, evolution, and statistics of collapsed structures.
+\end{itemize}
+
+We will study mainly the Halo model. We start with a model that only contains dark matter, and later introduce baryons.
+
+\section{Spherical Collapse}
+
+We consider a spherical top-hat overdensity $\delta$ in an otherwise homogeneous expanding universe, such as in \cref{fig:top-hat}
+
+% TODO top hat
+% \begin{marginfigure}
+% 	\centering
+% 	\includegraphics[width=0.7\textwidth]{img/ch-04/top-hat.pdf}
+% 	\caption{A spherical top-hat overdensity. Outside the sphere, the density is $\bar{\rho}$, while inside it is $\rho = \bar{\rho}(1+\delta)$}
+% 	\label{fig:top-hat}
+% \end{marginfigure}
+
+We make a few simplifying assumptions:
+\begin{itemize}
+	\item The universe is flat and matter-dominated, such that $\Omega_0 = \Omega_{\text{m}, 0} = 1$.
+	\item There is only collisionless dark matter.
+\end{itemize}
+We now look at a thin shell with radius $r$ inside the top-hat sphere. Newton's second law states
+\begin{align*}
+	\dv[2]{r}{t}
+	&= - \frac{G M}{r},
+\end{align*}
+where $M$ is the mass inside the radius $r$,
+\begin{align*}
+	M = M(r) = \frac{4\pi}{3} r^3 \bar{\rho}(1+\delta).
+\end{align*}
+Note that $M(r)$ is constant as long as the different shells don't cross each other.
+The specific energy, or energy per unit mass, of the shell is
+\begin{align*}
+	\epsilon = \frac{1}{2} \left( \dv{r}{t} \right)^2
+	- \frac{G M}{r},
+\end{align*}
+which is constant because of conservation of energy.
+If $\epsilon \geq 0$, the shell expands forever, and if $\epsilon < 0$, the shell might expand for a while, but will eventually contract and collapse. We will focus on the latter case.
+
+The solution of the equation of motion for $\epsilon < 0$ is
+\begin{align*}
+	r &= A(1- \cos(\theta)) &
+	t &= B(\theta - \sin\theta) &
+	A &= \frac{GM}{2 \abs{\epsilon}} &
+	B &= \frac{GM}{(2 \abs{\epsilon})^{2/3}}
+\end{align*}
+This is plotted in \cref{fig:collapse-solution}.
+The shell expands, reaches a maximum radius $r_\text{ta} = 2 A$ at $t_\text{ta} = \pi B$, and collapses at $t_\text{coll} = 2 t_\text{ta}$.
+However, the model will be invalid shortly before $t_\text{coll}$, since shells start crossing and virialize, which will be discussed later.
+% TODO 
+% \begin{figure}
+% 	\centering
+% 	\includegraphics[width=0.7\textwidth]{img/ch-04/collapse-solution.pdf}
+% 	\caption{The solution of the equation of motion for a collapsing top-hat model.}
+% 	\label{fig:collapse-solution}
+% \end{figure}
+
+
+
+We now set the initial conditions.
+At an early time $t_i$, we have $r=r_i$ and $v = v_i$. We assume that at $t_i$, the shell follows the Hubble flow:
+\begin{align*}
+	v_i
+	&= \dv{(a x_i)}{t} 
+	= \dot{a} x_i &&\text{no peculiar velocity}\\
+	&= H r_i.
+\end{align*}
+At $t=t_i$,
+\begin{align*}
+	M
+	&= \frac{4\pi}{3} r_i^3 \bar{\rho}(t_i)(1+\delta_i)\\
+	\epsilon
+	&= \frac{1}{2} v_i^2 - \frac{GM}{r_i}.
+\end{align*}
+Since we assumed a matter-dominated universe, $a \propto t^{2/3}$, and thus $H = \frac{2}{3} t^{-1}$. We also assumed a flat universe, so
+\begin{align*}
+	\bar{\rho}
+	= \rho_\text{crit}
+	= \frac{1}{6\pi G t^2}.
+\end{align*}
+We can plug these expressions into the definitions of $A$ and $B$ to get
+\begin{align*}
+	A = \frac{3}{10} \frac{r_i}{\delta_i},
+	\qquad
+	B = \frac{9}{20} \frac{t_i}{\delta_i}.
+\end{align*}
+
+The density inside the top hat is
+\begin{align*}
+	\rho
+	&= \frac{M}{\frac{4\pi}{3}r^3}
+	= \frac{3M}{4\pi A^3} (1-\cos\theta)-3
+	&&\text{because } r = A(1-\cos\theta),
+\end{align*}
+while outside it is
+\begin{align*}
+	\bar{\rho}
+	&= \frac{1}{6\pi G t^2}
+	= \frac{1}{6 \pi G B^2} (\theta-\sin\theta)^{-2}
+	&& \text{because } t = B(\theta - \sin\theta).
+\end{align*}
+It follows that
+\begin{align*}
+	1 + \delta
+	= \frac{\rho}{\bar{\rho}}
+	= \frac{9}{2} \frac{(\theta-\sin\theta)^{2}}{(1-\cos\theta)^3}.
+\end{align*}
+
+At early times, $t << t_\text{ta}$, we perform a Taylor expansion in time and $\theta$ to get
+\begin{align*}
+	\delta \approx \frac{3}{20} \theta^2
+	\qquad
+	t \approx \frac{B}{6} \theta^3.
+\end{align*}
+If we plug this into our previous result, we get
+\begin{align*}
+	\delta
+	= \frac{3}{20} \left( \frac{6 t}{B} \right)^{2/3}
+	= \frac{3}{20} (6\pi)^{2/3} \left( \frac{t}{t_\text{ta}} \right)^{2/3},
+\end{align*}
+which is in agreement with what we found in linear perturbation theory for a matter-dominated universe, where we saw $D(z) \propto a \propto t^{2/3}$.
+We define
+\begin{align*}
+	\delta_\text{lin} = \frac{3}{20} (6\pi)^{2/3} \left( \frac{t}{t_\text{ta}} \right)^{2/3},
+\end{align*}
+and expect $\delta = \delta_\text{lin}$ at early times, but not at later times.
+
+% TODO figure
+The green curve shows the density outside the top-hat sphere, where the density decreases as the universe expands.
+The blue curve is the linear model, which we have just calculated.
+The red curve shows the realistic behaviour.
+
+At turn around,
+\begin{align*}
+	1 + \delta(t_\text{ta})
+	&= \frac{9}{2} \frac{\pi^2}{2^{3}},
+\end{align*}
+so $\delta(t_\text{ta}) \approx 4.55$. Also,
+\begin{align*}
+	\delta_\text{lin}(t_\text{ta})
+	= \frac{3}{20} (6\pi)^{2/3}
+	\approx 1.062.
+\end{align*}
+At collapse time, we find similarly $\delta(t_\text{coll}) \to \infty$ and $\delta_\text{lin}(t_\text{coll}) \approx 1.686$.
+% TODO put the results in a table
+
+For an OCDM model, one can show that 
+\begin{align*}
+	\delta_c \approx 1.686 [\Omega_m(t_\text{coll})]^{0.0185},
+\end{align*}
+and for %TODO
+\begin{align*}
+	\delta_c \approx 1.686 [\Omega_m(t_\text{coll})]^{0.0055}.
+\end{align*}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
