Add image SDSS map

--- a/tex/main/03-linear-perturbations.tex
+++ b/tex/main/03-linear-perturbations.tex
@@ -791,23 +791,22 @@ where
 $\delta_g = (n_g - \bar{n}_g)/\bar{n}_g$ is the galaxy overdensity,
 $\delta = (\rho-\bar{\rho})/\bar{\rho}$ is the dark matter overdensity,
 and $b$ is the bias.
-The bias depends on the galaxy sample, the scale $k$, and redshif $z$. Fortunately, on large scales, the bias is mostly scale independent.
+The bias depends on the galaxy sample, the scale $k$, and redshift $z$. Fortunately, on large scales, the bias is mostly scale independent.
 
 There are two kinds of galaxy surveys:
 \begin{itemize}
 	\item Imaging surveys, such as POSS/APM, DES, and SDSS, measure the position and shape of galaxies.
-	\item Spectroscopy surveys, such as SDSS, 2DF, and Wiggle-z, measure the position and the redshift of galaxies.
+	\item Spectroscopy surveys, such as SDSS, 2DF, and Wiggle-z, measure the position and redshift of galaxies. A slice of the galaxy map measured by SDSS is shown in \cref{fig:spectroscopic-survey}.
 \end{itemize}
 
-% TODO SDSS image
-% \begin{figure}
-% 	\centering
-% 	\includegraphics[width=0.7\textwidth]{img/ch-03/spectroscopic-survey.png}
-% 	\caption{2dF survey.}
-% 	\label{fig:spectroscopic-survey}
-% \end{figure}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\textwidth]{img/ch-03/sdss.jpeg}
+	\caption{A slice of the sky from the SDSS. Some galaxy clusters seem to be stretched in the radial direction, which is caused by the different peculiar velocities of the galaxies. This phenomenon is known as redshift space distortions.}
+	\label{fig:spectroscopic-survey}
+\end{figure}
 
-Some galaxy clusters seem to be stretched in the radial direction, which is caused by their peculiar velocities. This phenomenon is known as redshift space distortions.
+
 
 % TODO power spectrum galaxies SDSS
 % \begin{figure}
@@ -822,7 +821,7 @@ From the residual plot, we see that even the baryon acoustic oscillations are we
 These are fixed in comoving coordinates, so they can function as a standard ruler.
 
 We can measure the two-dimensional clustering with an imaging survey such as APM, as shown in \cref{fig:apm}.
-This can be used to rule out HDM or Bayron only models.
+This can be used to rule out HDM or bayron-only models.
 The current measurements confirm the ΛCDM model, even though there are still small deviations, which come from the scale dependence of the bias factor.
 % TODO APM measurement (Dodelson)
 % \begin{figure}
