--- a/tex/main/04-nonlinear-perturbations.tex
+++ b/tex/main/04-nonlinear-perturbations.tex
@@ -21,7 +21,6 @@ We will study mainly the Halo model. We start with a model that only contains da
 \section{Spherical Collapse}
 
 We consider a spherical top-hat overdensity $\delta$ in an otherwise homogeneous expanding universe, such as in \cref{fig:top-hat}
-
 % TODO top hat
 % \begin{marginfigure}
 % 	\centering
@@ -29,7 +28,6 @@ We consider a spherical top-hat overdensity $\delta$ in an otherwise homogeneous
 % 	\caption{A spherical top-hat overdensity. Outside the sphere, the density is $\bar{\rho}$, while inside it is $\rho = \bar{\rho}(1+\delta)$}
 % 	\label{fig:top-hat}
 % \end{marginfigure}
-
 We make a few simplifying assumptions:
 \begin{itemize}
 	\item The universe is flat and matter-dominated, such that $\Omega_0 = \Omega_{\text{m}, 0} = 1$.
@@ -42,10 +40,10 @@ We now look at a thin shell with radius $r$ inside the top-hat sphere. Newton's 
 \end{align*}
 where $M$ is the mass inside the radius $r$,
 \begin{align*}
-	M = M(r) = \frac{4\pi}{3} r^3 \bar{\rho}(1+\delta).
+	M = M(r) = \frac{4\pi r^3}{3} \bar{\rho}(1+\delta).
 \end{align*}
 Note that $M(r)$ is constant as long as the different shells don't cross each other.
-The specific energy, or energy per unit mass, of the shell is
+The energy per unit mass of the shell, also called its specific energy, is the sum of a kinetic and a potential contribution:
 \begin{align*}
 	\epsilon = \frac{1}{2} \left( \dv{r}{t} \right)^2
 	- \frac{G M}{r},
@@ -55,12 +53,12 @@ If $\epsilon \geq 0$, the shell expands forever, and if $\epsilon < 0$, the shel
 
 The solution of the equation of motion for $\epsilon < 0$ is
 \begin{align*}
-	r &= A(1- \cos(\theta)) &
+	r &= A(1- \cos \theta) &
 	t &= B(\theta - \sin\theta) &
 	A &= \frac{GM}{2 \abs{\epsilon}} &
 	B &= \frac{GM}{(2 \abs{\epsilon})^{2/3}}
 \end{align*}
-This is plotted in \cref{fig:collapse-solution}.
+This is plotted in \cref{fig:collapse-solution}. % TODO
 The shell expands, reaches a maximum radius $r_\text{ta} = 2 A$ at $t_\text{ta} = \pi B$, and collapses at $t_\text{coll} = 2 t_\text{ta}$.
 However, the model will be invalid shortly before $t_\text{coll}$, since shells start crossing and virialize, which will be discussed later.
 % TODO 
@@ -72,7 +70,6 @@ However, the model will be invalid shortly before $t_\text{coll}$, since shells 
 % \end{figure}
 
 
-
 We now set the initial conditions.
 At an early time $t_i$, we have $r=r_i$ and $v = v_i$. We assume that at $t_i$, the shell follows the Hubble flow:
 \begin{align*}
@@ -80,15 +77,17 @@ At an early time $t_i$, we have $r=r_i$ and $v = v_i$. We assume that at $t_i$, 
 	&= \dv{(a x_i)}{t} 
 	= \dot{a} x_i &&\text{no peculiar velocity}\\
 	&= H r_i.
+	&& H = \dot{a}/a \text{, and } r = a x
 \end{align*}
 At $t=t_i$,
 \begin{align*}
 	M
-	&= \frac{4\pi}{3} r_i^3 \bar{\rho}(t_i)(1+\delta_i)\\
+	= \frac{4\pi r_i^3}{3}  \bar{\rho}(t_i)(1+\delta_i),
+	\qquad
 	\epsilon
-	&= \frac{1}{2} v_i^2 - \frac{GM}{r_i}.
+	= \frac{v_i^2}{2}  - \frac{GM}{r_i}.
 \end{align*}
-Since we assumed a matter-dominated universe, $a \propto t^{2/3}$, and thus $H = \frac{2}{3} t^{-1}$. We also assumed a flat universe, so
+Since we assumed a matter-dominated universe, $a \propto t^{2/3}$, and $H = 2 t^{-1} / 3$. We also assumed a flat universe, so
 \begin{align*}
 	\bar{\rho}
 	= \rho_\text{crit}
