--- a/tex/main/03-linear-perturbations.tex
+++ b/tex/main/03-linear-perturbations.tex
@@ -806,15 +806,12 @@ There are two kinds of galaxy surveys:
 	\label{fig:spectroscopic-survey}
 \end{figure}
 
-
-
-% TODO power spectrum galaxies SDSS
-% \begin{figure}
-% 	\centering
-% 	\includegraphics[width=0.7\textwidth]{img/ch-03/sdss-power-spectrum.pdf}
-% 	\caption{SDSS survey. The redder regions have more galaxies than the green regions.}
-% 	\label{fig:sdss-power-spectrum}
-% \end{figure}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\textwidth]{img/ch-03/sdss-power-spectrum.pdf}
+	\caption{The SDSS power spectrum.}
+	\label{fig:sdss-power-spectrum}
+\end{figure}
 
 In \cref{fig:sdss-power-spectrum}, the power spectrum found by the SDSS is shown.
 From the residual plot, we see that even the baryon acoustic oscillations are well resolved.
@@ -823,13 +820,12 @@ These are fixed in comoving coordinates, so they can function as a standard rule
 We can measure the two-dimensional clustering with an imaging survey such as APM, as shown in \cref{fig:apm}.
 This can be used to rule out HDM or bayron-only models.
 The current measurements confirm the ΛCDM model, even though there are still small deviations, which come from the scale dependence of the bias factor.
-% TODO APM measurement (Dodelson)
-% \begin{figure}
-% 	\centering
-% 	\includegraphics[width=0.7\textwidth]{img/ch-03/apm.pdf}
-% 	\caption{Results of the APM survey.}
-% 	\label{fig:apm}
-% \end{figure}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\textwidth]{img/ch-03/apm.pdf}
+	\caption{Results of the APM survey.}
+	\label{fig:apm}
+\end{figure}
 
 For the further interpretation of galaxy clustering measurements, we need to study the physics of galaxy formation and non-linear structure formation.
 
