--- a/tex/config/preamble.tex
+++ b/tex/config/preamble.tex
@@ -11,6 +11,8 @@
 \usepackage{booktabs}               % Nicer tables
 \usepackage{xcolor}
 \usepackage{enumitem}
+\usepackage{graphicx}
+\usepackage{import}   % import images from tikz as pdf_tex
 \usepackage{subcaption}
 
 \definecolor{primary_color}{RGB}{214,35,0}
