--- a/tex/main/04-nonlinear-perturbations.tex
+++ b/tex/main/04-nonlinear-perturbations.tex
@@ -20,20 +20,14 @@ We will study mainly the Halo model. We start with a model that only contains da
 
 \section{Spherical Collapse}
 
-We consider a spherical top-hat overdensity $\delta$ in an otherwise homogeneous expanding universe, such as in \cref{fig:top-hat}
-% TODO top hat
-% \begin{marginfigure}
-% 	\centering
-% 	\includegraphics[width=0.7\textwidth]{img/ch-04/top-hat.pdf}
-% 	\caption{A spherical top-hat overdensity. Outside the sphere, the density is $\bar{\rho}$, while inside it is $\rho = \bar{\rho}(1+\delta)$}
-% 	\label{fig:top-hat}
-% \end{marginfigure}
+We consider a spherical overdensity with in an otherwise homogeneous expanding universe. Outside the sphere, the density is $\bar{\rho}$, while inside it is $\rho = \bar{\rho}(1+\delta)$.
+
 We make a few simplifying assumptions:
 \begin{itemize}
 	\item The universe is flat and matter-dominated, such that $\Omega_0 = \Omega_{\text{m}, 0} = 1$.
 	\item There is only collisionless dark matter.
 \end{itemize}
-We now look at a thin shell with radius $r$ inside the top-hat sphere. Newton's second law states
+We now look at a thin shell with radius $r$ inside the top-hat sphere, and write down its equation of motion. Newton's second law states
 \begin{align*}
 	\dv[2]{r}{t}
 	&= - \frac{G M}{r},
@@ -42,8 +36,8 @@ where $M$ is the mass inside the radius $r$,
 \begin{align*}
 	M = M(r) = \frac{4\pi r^3}{3} \bar{\rho}(1+\delta).
 \end{align*}
-Note that $M(r)$ is constant as long as the different shells don't cross each other.
-The energy per unit mass of the shell, also called its specific energy, is the sum of a kinetic and a potential contribution:
+Note that $M(r)$ is constant as long as the different shells don't cross each other, which we assume for now.
+The energy per unit mass of the shell, also called its specific energy $\epsilon$, is the sum of a kinetic and a potential term:
 \begin{align*}
 	\epsilon = \frac{1}{2} \left( \dv{r}{t} \right)^2
 	- \frac{G M}{r},
@@ -58,28 +52,29 @@ The solution of the equation of motion for $\epsilon < 0$ is
 	A &= \frac{GM}{2 \abs{\epsilon}} &
 	B &= \frac{GM}{(2 \abs{\epsilon})^{2/3}}
 \end{align*}
-This is plotted in \cref{fig:collapse-solution}. % TODO
+The solution $r(t)$ is plotted in \cref{fig:shell-collapse-r}.
 The shell expands, reaches a maximum radius $r_\text{ta} = 2 A$ at $t_\text{ta} = \pi B$, and collapses at $t_\text{coll} = 2 t_\text{ta}$.
 However, the model will be invalid shortly before $t_\text{coll}$, since shells start crossing and virialize, which will be discussed later.
-% TODO 
-% \begin{figure}
-% 	\centering
-% 	\includegraphics[width=0.7\textwidth]{img/ch-04/collapse-solution.pdf}
-% 	\caption{The solution of the equation of motion for a collapsing top-hat model.}
-% 	\label{fig:collapse-solution}
-% \end{figure}
+\begin{figure}
+	\centering
+	\import{img/ch-04/}{shell-evolution-r.pdf_tex}
+	\caption{The evolution of the shell radius of a spherical overdensity, with negative total energy. The shell expands, reaches a maxium radius, and collapses, which is described by the analytical solution derived in the text. Shortly before collapse, the solution becomes invalid as shells start crossing.}
+	\label{fig:shell-collapse-r}
+\end{figure}
 
 
-We now set the initial conditions.
-At an early time $t_i$, we have $r=r_i$ and $v = v_i$. We assume that at $t_i$, the shell follows the Hubble flow:
+
+We would also like to derive an expression for $\rho(t)$ inside the sphere, and find the critical density which is required for collapse. To do this, we use a few more of our assumptions and perform some approximations.
+
+At an early time $t_i$, we define $r=r_i$ and $v = v_i$. We assume that at $t_i$, the shell follows the Hubble flow:
 \begin{align*}
 	v_i
 	&= \dv{(a x_i)}{t} 
-	= \dot{a} x_i &&\text{no peculiar velocity}\\
+	= \dot{a} x_i &&\text{no peculiar velocity, and } r = a x\\
 	&= H r_i.
-	&& H = \dot{a}/a \text{, and } r = a x
+	&& H = \dot{a}/a 
 \end{align*}
-At $t=t_i$,
+Plugging in at $t=t_i$, we find
 \begin{align*}
 	M
 	= \frac{4\pi r_i^3}{3}  \bar{\rho}(t_i)(1+\delta_i),
@@ -87,7 +82,7 @@ At $t=t_i$,
 	\epsilon
 	= \frac{v_i^2}{2}  - \frac{GM}{r_i}.
 \end{align*}
-Since we assumed a matter-dominated universe, $a \propto t^{2/3}$, and $H = 2 t^{-1} / 3$. We also assumed a flat universe, so
+Since we assumed a matter-dominated universe, $a \propto t^{2/3}$, and $H = 2/(3t)$. We also assumed a flat universe, so
 \begin{align*}
 	\bar{\rho}
 	= \rho_\text{crit}
@@ -100,7 +95,7 @@ We can plug these expressions into the definitions of $A$ and $B$ to get
 	B = \frac{9}{20} \frac{t_i}{\delta_i}.
 \end{align*}
 
-The density inside the top hat is
+The density inside the top hat sphere is then
 \begin{align*}
 	\rho
 	&= \frac{M}{\frac{4\pi}{3}r^3}
@@ -120,52 +115,57 @@ It follows that
 	= \frac{\rho}{\bar{\rho}}
 	= \frac{9}{2} \frac{(\theta-\sin\theta)^{2}}{(1-\cos\theta)^3}.
 \end{align*}
-
-At early times, $t << t_\text{ta}$, we perform a Taylor expansion in time and $\theta$ to get
+Since we want to find $\rho(t)$ instead of $\rho(\theta)$, we have a little more work to do.
+An analytical solution is nowhere to be seen, so we try to find at least an approximation.
+At early times, $t << t_\text{ta}$, we perform a Taylor expansion in $t$ and $\theta$ to get
 \begin{align*}
 	\delta \approx \frac{3}{20} \theta^2
 	\qquad
 	t \approx \frac{B}{6} \theta^3.
 \end{align*}
-If we plug this into our previous result, we get
+These two expressions can be combined to find
 \begin{align*}
 	\delta
 	= \frac{3}{20} \left( \frac{6 t}{B} \right)^{2/3}
 	= \frac{3}{20} (6\pi)^{2/3} \left( \frac{t}{t_\text{ta}} \right)^{2/3},
 \end{align*}
-which is in agreement with what we found in linear perturbation theory for a matter-dominated universe, where we saw $D(z) \propto a \propto t^{2/3}$.
-We define
+which is fortunately\sidenote{Since we assumed early times, linear perturbation theory should still be valid, so comparing our new result to what we found in the previous chapter gives us some reassurance that everything still works correctly.} in agreement with what we found in linear perturbation theory for a matter-dominated universe, where we derived $D(z) \propto a \propto t^{2/3}$.
+Note that this result is only valid at early times, and the actual value of $\delta$ might be quite different at later times. To make things clearer, we define
 \begin{align*}
 	\delta_\text{lin} = \frac{3}{20} (6\pi)^{2/3} \left( \frac{t}{t_\text{ta}} \right)^{2/3},
 \end{align*}
-and expect $\delta = \delta_\text{lin}$ at early times, but not at later times.
+and expect $\delta = \delta_\text{lin}$ at early times, but not at late times. We can find $\rho$ from $\delta$, and $\rho_\text{lin}$ from $\delta_\text{lin}$, which is a more intuitive value. The relationship between $\rho$, $\rho_\text{lin}$, and the density outside the sphere, $\bar{\rho}$, is shown in \cref{fig:shell-collapse-rho}.
 
-% TODO figure
-The green curve shows the density outside the top-hat sphere, where the density decreases as the universe expands.
-The blue curve is the linear model, which we have just calculated.
-The red curve shows the realistic behaviour.
+\begin{figure}
+	\centering
+	\import{img/ch-04/}{shell-evolution-rho.pdf_tex}
+	\caption{The evolution of the density of a spherical overdensity with negative total energy. The exact model is $\rho$, which agrees well with the linearised approximation $\rho_\text{lin}$ at early times, but only until the turn-around time. For reference, the average density $\bar{\rho}$ of the universe outside the sphere is also shown.}
+	\label{fig:shell-collapse-rho}
+\end{figure}
 
-At turn around,
-\begin{align*}
-	1 + \delta(t_\text{ta})
-	&= \frac{9}{2} \frac{\pi^2}{2^{3}},
-\end{align*}
-so $\delta(t_\text{ta}) \approx 4.55$. Also,
-\begin{align*}
-	\delta_\text{lin}(t_\text{ta})
-	= \frac{3}{20} (6\pi)^{2/3}
-	\approx 1.062.
-\end{align*}
-At collapse time, we find similarly $\delta(t_\text{coll}) \to \infty$ and $\delta_\text{lin}(t_\text{coll}) \approx 1.686$.
-% TODO put the results in a table
+The overdensity from the linearized model and the exact model at different times are compared in \cref{tab:exact-vs-lin}.
+We notice that the overdensities are larger than one, which in hindsight clarifies why we require non-linear perturbation theory. In the previous chapter, we always assumed $\delta \ll 1$, which is obviously not valid any more.
+\begin{margintable}
+	\begin{tabular}{lll}
+		\toprule
+		model & $t_\text{ta}$ & $t_\text{coll}$\\
+		\midrule
+		$\delta$ & 4.55 & $\infty$\\
+		$\delta_\text{lin}$ & 1.062 & 1.686\\
+		\bottomrule
+	\end{tabular}
+	\caption{Overdensities in the linearized and the exact model at different times.}
+	\label{tab:exact-vs-lin}
+\end{margintable}
 
-For an OCDM model, one can show that 
+Depending on the cosmological models, the overdensity $\delta_c$ required for collapse is different. We have so far worked with a simplified CDM model (sCDM), where we assumed that the universe is flat and dominated by collisionless dark matter. For other cosmologies, such as OCDM and ΛCDM, it turns out that multiplying the sCDM result with an additional factor yields a good approximation:
 \begin{align*}
-	\delta_c \approx 1.686 [\Omega_m(t_\text{coll})]^{0.0185},
-\end{align*}
-and for %TODO
-\begin{align*}
-	\delta_c \approx 1.686 [\Omega_m(t_\text{coll})]^{0.0055}.
+	\delta_c \approx
+	\begin{cases}
+	1.686 & \text{for sCDM}\\
+	1.686 [\Omega_m(t_\text{coll})]^{0.0185} & \text{for OCDM}\\
+	1.686 [\Omega_m(t_\text{coll})]^{0.0055} & \text{for ΛCDM}
+	\end{cases}
 \end{align*}
 
 
